<resources>
    <string name="app_name">DotsAndBoxes</string>
    <string name="board_size">Board Size</string>
    <string name="players">Players</string>
    <string name="name">Name</string>
    <string name="players_text">Players</string>
    <string name="boardSizeDropDownDes">4 x 4</string>
    <string name="playerNumDeafult">2</string>
    <string name="startButton">Start</string>
    <string name="player4Enter">Player 4</string>
    <string name="player3Enter">Player 3</string>
    <string name="player2Enter">Player 2</string>
    <string name="player1Enter">Player 1</string>
    <string name="instructions">
        Starting with an empty grid of dots, players take turns, adding a single horizontal or vertical line between two unjoined adjacent dots.<br /><br />
        A player who completes the fourth side of a 1×1 box earns one point and takes another turn.<br /><br />
        The game ends when no more lines can be placed. The winner of the game is the player with the most points.</string>
    <string name="this_is_a_popup_window">This is a popup window.</string>
    <string-array name="players_list">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="boardSize_list">
        <item>4 x 4</item>
        <item>6 x 6</item>
        <item>8 x 8</item>
    </string-array>
</resources>